--- a/index.html
+++ b/index.html
@@ -81,24 +81,10 @@
                 </div>
             </div>
 
-            <!-- Action Buttons -->
-            <div class="control-group">
-                <button 
-                    id="copyBtn" 
-                    class="action-btn action-btn-copy" 
-                    aria-label="Copy text to clipboard">
-                    Copy
-                </button>
-                <button 
-                    id="clearBtn" 
-                    class="action-btn action-btn-clear" 
-                    aria-label="Clear all text">
-                    Clear
-                </button>
-            </div>
+            <!-- Action Buttons moved to keyboard edges -->
         </div>
 
-        <!-- Current Mode Indicator -->
+        <!-- Current Mode Indicator 
         <div class="mode-indicator">
             <span id="modeDisplay" class="mode-display">Lowercase Mode</span>
         </div>
